--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,7 @@
         "interface/ftdi/esp32_devkitj_v1.cfg",
         "target/esp32.cfg"
     ],
-    "idf.portWin": "COM16",
+    "idf.portWin": "COM19",
     "idf.pythonBinPathWin": "C:/Espressif/python_env/idf5.2_py3.11_env/Scripts/python.exe",
     "idf.toolsPathWin": "C:\\Espressif",
     "files.associations": {
@@ -36,7 +36,9 @@
         "bitset": "c",
         "format": "c",
         "initializer_list": "c",
-        "regex": "c"
+        "regex": "c",
+        "tp_spi.h": "c",
+        "lvgl_spi_conf.h": "c"
     },
     "idf.flashType": "UART"
 }
